--- a/CookPopularControl/Themes/DataGridStyle.xaml
+++ b/CookPopularControl/Themes/DataGridStyle.xaml
@@ -1,6 +1,5 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:attached="clr-namespace:CookPopularControl.Communal.Attached"
                     xmlns:assistant="clr-namespace:CookPopularControl.Controls.Grid">
 
     <ResourceDictionary.MergedDictionaries>
@@ -9,6 +8,7 @@
 
     <Style x:Key="DefaultDataGridStyle" TargetType="{x:Type DataGrid}" BasedOn="{StaticResource DataGridBaseStyle}">
         <Setter Property="assistant:DataGridAssistant.IsShowSerialNumber" Value="True" />
+        <Setter Property="assistant:DataGridAssistant.IsRegisterSelectAll" Value="True" />
     </Style>
     
 </ResourceDictionary>
