--- a/MvvmTestDemo/DemosView/CheckBoxDemo.xaml
+++ b/MvvmTestDemo/DemosView/CheckBoxDemo.xaml
@@ -27,7 +27,7 @@
                           pc:CheckBoxAssistant.FillType="Check"
                           pc:CheckBoxAssistant.FillSize="25"
                           pc:CheckBoxAssistant.FillThickness="1"
-                          FontSize="20" Padding="10,0,0,0"/>
+                          FontSize="20" Padding="10,0,0,0" Background="Red"/>
                 <CheckBox Width="220" Height="60" Content="LineCheckBox" IsEnabled="False" ToolTip="LineCheckBox"
                           pc:CheckBoxAssistant.FillBrush="{StaticResource DefaultBackgroundBrush}" 
                           pc:CheckBoxAssistant.FillType="Line"
